--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,11 +50,9 @@ jobs:
                    -e HOST_USER_ID \
                     "quay.io/pypa/manylinux2014_aarch64:latest" \
                     bash -c "cd $DOCKER_ROOT_DIRECTORY;
-                    "${PYBIN}/pip" install tox && \
+                    "${PYBIN}/pip" install tox wheel tox-docker && \
                     tox -e style && \
-                    "${PYBIN}/pip" install wheel && \
-                    "${PYBIN}/pip" install tox tox-docker && \
-                    "tox"
+                    tox"
                     
       displayName: 'Running AArch64 build'
       env:
